overflow bug fixed

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -7,3 +7,8 @@
   min-width: unset !important;
   width: auto;
 }
+
+.panel-content {
+  /* Contain needs to be unset in order to use the production date selector */
+  contain: unset !important; 
+}
